[gd_scene load_steps=4 format=3 uid="uid://bibm3u8hycr37"]

[ext_resource type="Script" uid="uid://b717xco5do5q7" path="res://scripts/maze.gd" id="1_0wfyh"]
[ext_resource type="Script" uid="uid://bow6ndxsal3t1" path="res://scripts/script_runner.gd" id="2_jyhfs"]
[ext_resource type="PackedScene" uid="uid://bic00e40n4ase" path="res://scenes/mouse.tscn" id="2_sugp2"]

[node name="Main" type="Node2D"]

[node name="Maze" type="Node2D" parent="."]
script = ExtResource("1_0wfyh")

[node name="UI" type="CanvasLayer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="UI"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -595.0
offset_top = -649.0
grow_horizontal = 0
grow_vertical = 0
size_flags_vertical = 2
script = ExtResource("2_jyhfs")
mouse_path = NodePath("../../Mouse")

[node name="CodeEditor" type="TextEdit" parent="UI/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
placeholder_text = "<Your Code Goes Here>"
scroll_smooth = true

[node name="HBoxContainer" type="HBoxContainer" parent="UI/VBoxContainer"]
layout_mode = 2

[node name="RunButton" type="Button" parent="UI/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "RUN CODE"

[node name="StopButton" type="Button" parent="UI/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "STOP"

[node name="Mouse" parent="." instance=ExtResource("2_sugp2")]
position = Vector2(25, 23)
